--- a/src/Components/Box/style.css
+++ b/src/Components/Box/style.css
@@ -1,6 +1,6 @@
-
-
 .box {
-    border: 1px solid whitesmoke;
+    border: 1px solid rgb(48, 53, 64);
     border-radius: 15px;
-}
+    background-color: rgb(25, 31, 44);
+  }
+  
