--- a/src/Components/SummaryList/style.css
+++ b/src/Components/SummaryList/style.css
@@ -9,10 +9,7 @@
     font-weight: bold;
     text-align: center;
     cursor: pointer;
-}
-
-.summary-list thead th span {
-    font-size: 18px;
+    position: relative;
 }
 
 
